--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="../Assets/Images/icono-title.ico">
     <link rel="stylesheet" href="../CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <title>Arredo - Crear Hogar</title>
+    <title>Game World</title>
 </head>
 
 <body>
@@ -18,9 +19,8 @@
         <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
             <div class="container-fluid">
                 <!-- Icono -->
-                <a class="navbar-brand" href="#">
-                    <i class="bi bi-layers-fill"></i>
-                    <span class="text-warning">Intelio</span>
+                <a id="icono" class="navbar-brand" href="#">
+                    <span class="text-danger"><i class="bi bi-controller"> Gaming World</i></span>
                 </a>
                 <!-- Boton para mostrar el menu -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#menu"
@@ -52,12 +52,9 @@
                                 <small>LinkedIn</small>
                             </a>
                         </li>
+
                         <li class="nav-item col-6 col-md-auto p-3">
-                            <i class="bi bi-whatsapp"></i>
-                            <small>Whatsapp</small>
-                        </li>
-                        <li class="nav-item col-6 col-md-auto p-3">
-                            <i class="bi bi-github"></i>
+
                             <small>Github</small>
                         </li>
                         <li class="nav-item col-6 col-md-auto p-3">
@@ -69,35 +66,174 @@
             </div>
         </nav>
     </div>
+    <!-- Cards -->
     <div class="card-group">
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <!-- Producto Uno -->
+        <div class="card">
+            <img src="../Assets/Productos/gameOne.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">Spider-Man Remastered</h5>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <a href="#" class="btn btn-outline-danger">Añadir al carrito</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <!-- Producto Dos -->
+        <div class="card" style="width: 15rem;">
+            <img src="../Assets/Productos/gameTwo.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <h5 class="card-title">God of War</h5>
+                <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis, rem minus.
+                    Iure nisi neque doloremque animi suscipit reiciendis ullam voluptate tempora.</p>
+                <a href="#" class="btn btn-outline-danger">Añadir al carrito</a>
             </div>
         </div>
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+        <!-- Producto Tres -->
+        <div class="card" style="width: 15rem;">
+            <img src="../Assets/Productos/gameThree.webp" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed dicta corporis
+                    reiciendis repellendus porro magnam consequatur sit magni dolorum? </p>
+                <a href="#" class="btn btn-outline-danger">Añadir al carrito</a>
+            </div>
+        </div>
+        <!-- Producto Cuatro -->
+        <div class="card" style="width: 15rem;">
+            <img src="../Assets/Productos/gameFour.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia culpa amet impedit
+                    alias, nulla ullam quam doloremque, nihil, commodi non et corrupti error excepturi possimus
+                    aspernatur?</p>
+                <a href="#" class="btn btn-outline-danger">Añadir al carrito</a>
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer id="Footer" class="text-center text-lg-start bg-light text-muted">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <span>Get connected with us on social networks:</span>
+            </div>
+            <!-- Left -->
+
+            <!-- Right -->
+            <div>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook-f"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-google"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-github"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+
+        <!-- Section: Links  -->
+        <section class="">
+            <div class="container text-center text-md-start mt-5">
+                <!-- Grid row -->
+                <div class="row mt-3">
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                        <!-- Content -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            <i class="fas fa-gem me-3"></i>Game World
+                        </h6>
+                        <p>
+                            Somos una plataforma de streaming de videojuegos donde puedes disfrutar de todos los titulos
+                            que se juegan en la actualidad.
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Products
+                        </h6>
+                        <p>
+                            <a href="#!" class="text-reset">Free to play</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Mas vendidos</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Mas descargados</a>
+                        </p>
+                        <p>
+                            <a href="#!" class="text-reset">Novedades</a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">
+                            Contacto
+                        </h6>
+                        <p>
+                            <i class="bi bi-whatsapp"></i> +54 9 2235561005
+                        </p>
+                        <p>
+                            <a href="https://github.com/LeandroLazarte"><i
+                                    class="bi bi-github">Github</i></a>
+                        </p>
+                        <p>
+                            <a href="https://www.instagram.com/leandrolazarte/" class="text-reset"> <i
+                                    class="bi bi-instagram">Instagram</i></a>
+                        </p>
+                        <p>
+                            <a href="https://www.linkedin.com/in/leandro-matias-lazarte/!" class="text-reset"><i class="bi bi-linkedin">LinkedIn</i></a>
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+
+                    <!-- Grid column -->
+                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                        <!-- Links -->
+                        <h6 class="text-uppercase fw-bold mb-4">From</h6>
+                        <p><i class="fas fa-home me-3"></i> Mar del Plata, BS AS, AR</p>
+                        <p>
+                            <i class="fas fa-envelope me-3"></i>
+                            leandro.lazarte27@hotmail.com
+                        </p>
+                    </div>
+                    <!-- Grid column -->
+                </div>
+                <!-- Grid row -->
+            </div>
+        </section>
+        <!-- Section: Links  -->
+
+        <!-- Copyright -->
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
+            © 2021 Copyright:
+            <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
+    <!-- Footer -->
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
